# spambota

./: .replit  app.db  auth_manager.py  db.py  init_admin.py  launch.html  main.py  pyproject.toml  replit.md  requirements.txt  routers.py  schemas.py  services.py
app/: auth_manager.py  core.py  db.py  main.py  routers.py  schemas.py  services.py
app/static/css/: style.css
app/templates/: accounts.html  folders.html  login.html  logs.html  messages.html  proxy_settings.html  telegram_auth.html
attached_assets/: Pasted--Telegram--1756233627989_1756233627990.txt  Pasted--import-secrets-from-telethon-errors-import-SessionPasswordNeededError--1756324261379_1756324261380.txt  Pasted-INFO-172-31-112-66-49880-POST-launch-start-1-HTTP-1-1-500-Internal-Server-Error-ERROR--1756749779742_1756749779743.txt  Pasted-INFO-Will-watch-for-changes-in-these-directories-home-runner-workspace-INFO-Uvicorn--1756379365314_1756379365315.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-app-routers-py-line-450-in-impo-1756750779930_1756750779931.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-pa-1756383279851_1756383279852.txt
templates/: accounts.html  base.html  launch.html  login.html  messages.html  register.html
